# agent-demo

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-infra.yml  pages.yml
demo/: configure_agent.py  load-wwi-data.py  publish_agent.py  run_notebook.py
docs/: two-surfaces.md
docs/surfaces/: foundry.md
infra/: main.bicep  main.json
infra/modules/: ai-foundry.bicep  policy.bicep
infra/parameters/: dev.bicepparam
src/agents/report_generator/: generator.py  mcp_server.py
src/cli/: mcp-config.json
src/cli/skills/: account-plan.md  customer-research.md  quota-forecast.md
src/orchestrator/: __main__.py  config.py  foundry_agent.py
src/sdk/: __init__.py  agent.py  cli.py
tests/unit/: test_report_generator.py  test_sdk_agent.py
website/: docusaurus.config.ts  package-lock.json  sidebars.ts
website/docs/: architecture.md  costs.md  demo-script.md  intro.md  setup.md  two-surfaces.md
website/src/components/HomepageFeatures/: index.tsx  styles.module.css
website/src/css/: custom.css
website/src/pages/: index.tsx
